button alignment fix

--- a/frontend/about.css
+++ b/frontend/about.css
@@ -17,6 +17,13 @@ body {
 .page-header {
     flex-shrink: 0;
     margin-bottom: 20px;
+
+    @media (max-width: 768px) {
+        & .home-btn {
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
 }
 
 .page-content {
