--- a/frontend/misc.css
+++ b/frontend/misc.css
@@ -39,6 +39,13 @@ body {
         font-size: 32px;
     }
 
+    @media (max-width: 768px) {
+        & .home-btn {
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
+
     & .home-btn {
         padding: 8px 18px;
         font-size: 16px;
